--- a/mysql-docker-compose.yml
+++ b/mysql-docker-compose.yml
@@ -10,8 +10,8 @@ services:
           mysql-net:
         image: registry.cn-hangzhou.aliyuncs.com/yangyuanpeng/mysql:10.4.12-utf8mb4-general_ci
         volumes:
-           - /TRS/APP/mysql/mysql-data:/var/lib/mysql
-           - /TRS/APP/mysql/conf.d:/etc/mysql/conf.d
+           - /mysql/mysql-data:/var/lib/mysql
+           - /mysql/conf.d:/etc/mysql/conf.d
            - /etc/localtime:/etc/localtime:ro
         ports :
                 - 3306:3306
